--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,18 @@
-<h3>Home</h3>
-<% @users.each do |user| %>
-  <p>User: <%=link_to user.name, user %></p>
+<p><%= @users.size %>个用户正在使用DaIII收藏他们喜欢的网页~</p>
+
+<% if user_signed_in? %>
+	<div class="alert alert-note">
+		<%=link_to "添加分类", new_site_cate_path %>
+		<%=link_to "添加网址", new_site_item_path %>
+	</div>
+	<% current_user.site_cates.each do |site_cate| %>
+		<h2><%= site_cate.name %></h2>
+		<ul>
+			<% site_cate.site_items.each do |item| %>
+				<li><%= item.site_title %></li>
+			<% end %>
+		</ul>
+	<% end %>
+<% else %>
+
 <% end %>
