--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,26 +1,27 @@
-<%= link_to "Railscomposerapp2", root_path, :class => 'brand' %>
+<%= link_to " DaIII.com ", root_path, :class => 'brand' %>
 <ul class="nav">
   <% if user_signed_in? %>
+    <li><%= link_to "分类", site_cates_path %> </li>
     <li>
-    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
+    <%= link_to '退出', destroy_user_session_path, :method=>'delete' %>
     </li>
   <% else %>
     <li>
-    <%= link_to 'Login', new_user_session_path %>
+    <%= link_to '登录', new_user_session_path %>
     </li>
   <% end %>
   <% if user_signed_in? %>
     <li>
-    <%= link_to 'Edit account', edit_user_registration_path %>
+    <%= link_to '管理账户', edit_user_registration_path %>
     </li>
     <% if current_user.has_role? :admin %>
       <li>
-      <%= link_to 'Admin', users_path %>
+      <%= link_to '后台', users_path %>
       </li>
     <% end %>
   <% else %>
     <li>
-    <%= link_to 'Sign up', new_user_registration_path %>
+    <%= link_to '注册', new_user_registration_path %>
     </li>
   <% end %>
 </ul>
