--- a/app/views/site_items/edit.html.erb
+++ b/app/views/site_items/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing site_item</h1>
+<h1>编辑网站</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @site_item %> |
-<%= link_to 'Back', site_items_path %>
+<%= link_to '显示', @site_item %> |
+<%= link_to '返回', site_items_path %>
