--- a/app/views/site_items/show.html.erb
+++ b/app/views/site_items/show.html.erb
@@ -1,48 +1,27 @@
-<p>
-  <b>Site cate:</b>
-  <%= @site_item.site_cate %>
-</p>
 
-<p>
-  <b>Site url:</b>
-  <%= @site_item.site_url %>
-</p>
-
-<p>
-  <b>Site title:</b>
+<h2>
   <%= @site_item.site_title %>
+</h2>
+
+<p>
+  <%= link_to @site_item.site_url, @site_item.site_url  %>
 </p>
 
 <p>
-  <b>Site username:</b>
   <%= @site_item.site_username %>
 </p>
 
 <p>
-  <b>Site password:</b>
   <%= @site_item.site_password %>
 </p>
 
 <p>
-  <b>Site password tips:</b>
   <%= @site_item.site_password_tips %>
 </p>
 
 <p>
-  <b>Note:</b>
   <%= @site_item.note %>
 </p>
 
-<p>
-  <b>Visit count:</b>
-  <%= @site_item.visit_count %>
-</p>
-
-<p>
-  <b>Rate count:</b>
-  <%= @site_item.rate_count %>
-</p>
-
-
-<%= link_to 'Edit', edit_site_item_path(@site_item) %> |
-<%= link_to 'Back', site_items_path %>
+<%= link_to '编辑', edit_site_item_path(@site_item) %> |
+<%= link_to '返回', site_items_path %>
