--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,14 +1,14 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>编辑用户信息 <%#= resource_name.to_s.humanize %></h2>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
+  <%= f.input :email, :disabled => true, :required => true %>
   <%= f.input :name, :autofocus => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+  <%= f.input :password, :autocomplete => "off", :hint => "如果不想改变当前的密码，则留空", :required => false %>
   <%= f.input :password_confirmation, :required => false %>
-  <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
-  <%= f.button :submit, 'Update', :class => 'btn-primary' %>
+  <%= f.input :current_password, :hint => "请输入你当前使用的密码", :required => true %>
+  <%= f.button :submit, :class => 'btn-primary' %>
 <% end %>
-<h3>Cancel my account</h3>
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
-<%= link_to "Back", :back %>
+<h3>注销登录</h3>
+<p>不喜欢? <%= link_to "注销账户", registration_path(resource_name), :data => { :confirm => "确认?" }, :method => :delete %>.</p>
+<%= link_to "返回", :back %>
