--- a/app/views/site_cates/_form.html.erb
+++ b/app/views/site_cates/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for(@site_cate) do |f| %>
   <%= f.error_notification %>
 
-  <%= f.input :name %>
-  <%= f.button :submit, :label => '添加' %>
+  <%= f.input :name, :required => true %>
+  <%= f.button :submit %>
 
 <% end %>
