--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,9 @@
 
 <% if user_signed_in? %>
 	<div class="alert alert-note">
-		<%=link_to "添加分类", new_site_cate_path %>
+		<%#=link_to "添加分类", new_site_cate_path %>
+		<%= link_to "添加分类", new_site_cate_path, data: { toggle: "modal", target: "#ajax-modal" } %>
+		
 		<%=link_to "添加网址", new_site_item_path %>
 	</div>
 	<% current_user.site_cates.each do |site_cate| %>
