--- a/app/views/site_items/new.js.erb
+++ b/app/views/site_items/new.js.erb
@@ -1,6 +1,7 @@
 <script language="javascript">
   var title       =   '.modal-title',
       loader      =   '.ajax-loader',
+      body     =   '.modal-body',
       content     =   '.modal-body-content',
       dataRemote  =   'a[data-remote=true]';
       toolbar     =   'div.modal-footer';
@@ -11,6 +12,7 @@
   //hides the modal and shows the ajax content
   $(loader).fadeToggle('slow', function() {
     $(content).html('<%= j render("site_items/form") %>');
+    $(body).addClass('longer')
     $(toolbar).hide();
     $(modal).modal();
   });
