--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -1,13 +1,13 @@
 <div id="ajax-modal" class="modal hide fade" tabindex="-1">
   <div class='modal-header'>
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 class="modal-title">模式窗口</h3>
+    <h3 class="modal-title">&nbsp;</h3>
   </div>
   <div class='modal-body'>
-    <div class="modal-body-content">fwe</div>
-    <div class="ajax-loader">wef</div>
+    <div class="modal-body-content"></div>
+    <div class="ajax-loader text-center"><%= image_tag asset_path("loader.gif") %></div>
   </div>
   <div class='modal-footer'>
-    <button type="button" data-dismiss="modal" class="btn">Close</button>
+    <button type="button" data-dismiss="modal" class="btn">关闭</button>
   </div>
 </div>
