--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
-<%= link_to " DaIII ", root_path, :class => 'brand' %>
+
+<%= link_to image_tag(asset_path('logo.png')), root_path, :class => 'brand' %>
 <ul class="nav">
   <% if user_signed_in? %>
-    <li><%= link_to "我的收藏", site_cates_path %> </li>
     <li>
       <%= link_to "添加分类", new_site_cate_path, data: { toggle: "modal", target: "#ajax-modal" } %>
     </li>
@@ -14,7 +14,7 @@
     </li>
   <% else %>
     <li>
-    <%= link_to '登录', new_user_session_path %>
+    <%= link_to "登录", "/home/modal_window", data: { toggle: "modal", target: "#ajax-modal" } %>
     </li>
   <% end %>
   <% if user_signed_in? %>
@@ -32,9 +32,6 @@
     </li>
   <% end %>
 
-  <li>
-    <%= link_to "Messages", "/home/modal_window", data: { toggle: "modal", target: "#ajax-modal" } %>
-  </li>
 </ul>
 
 <%= render 'layouts/modal' %>
