--- a/app/views/site_items/index.html.erb
+++ b/app/views/site_items/index.html.erb
@@ -1,20 +1,6 @@
 <h1>网站列表</h1>
 
 <table border='1'>
-  <tr>
-    <th>Site url</th>
-    <th>Site title</th>
-    <th>Site username</th>
-    <th>Site password</th>
-    <th>Site password tips</th>
-    <th>Note</th>
-    <th>Visit count</th>
-    <th>Rate count</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @site_items.each do |site_item| %>
   <tr>
     <td><%= site_item.site_url %></td>
@@ -22,12 +8,9 @@
     <td><%= site_item.site_username %></td>
     <td><%= site_item.site_password %></td>
     <td><%= site_item.site_password_tips %></td>
-    <td><%= site_item.note %></td>
-    <td><%= site_item.visit_count %></td>
-    <td><%= site_item.rate_count %></td>
-    <td><%= link_to 'Show', site_item %></td>
-    <td><%= link_to 'Edit', edit_site_item_path(site_item) %></td>
-    <td><%= link_to 'Destroy', site_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to '详细', site_item_path(site_item) %></td>
+    <td><%= link_to '修改', edit_site_item_path(site_item) %></td>
+    <td><%= link_to '删除', site_item, method: :delete, data: { confirm: '确定删除?' } %></td>
   </tr>
 <% end %>
 </table>
