--- a/app/assets/stylesheets/lavishbootstrap.css.scss
+++ b/app/assets/stylesheets/lavishbootstrap.css.scss
@@ -125,9 +125,9 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: '微软雅黑', '宋体', Arial, sans-serif;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 28px;
   color: #932772;
   background-color: #f3e7f5;
 }
