--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,18 @@
 <% unless user_signed_in? %>
 	<div class="hero-unit">
-	  <h1>Hello, world!</h1>
-	  <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-	  <div class="alert alert-note">
-	  	<%= @users.size %>个用户正在使用DaIII收藏他们喜欢的网页~</div>
-	  <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
+	  <h1>你好, Daiii!</h1>
+	  <p>互联网是一个浩大而神奇的地方，充满着令人激动的页面和信息，我们不时想要回到某个页面。那么，随之而来的问题，当你打开你的书签和… …你可能不记得站点的名称，或忘了你把它放在什么文件夹，或者你无法在成堆的文件夹里把它给翻出来！
+		</p><p>
+		你不是唯一出现这种情况的人。这也是为什么有那么多的新型网站上线，提供给你全新的和直观的方式来收藏和保存的内容。Daiii就是其中一个，帮助你保存和收藏你喜欢的网页的工具。希望你喜欢</p>
+		<div class="alert alert-note">
+	  	已经有<%= @users.size %>个网友正在使用DaIII收藏他们喜欢的网页~</div>
+	  <p><a href="/users/sign_up" class="btn btn-primary btn-large">现在就开始 »</a></p>
 	</div>
 
 <% else %>
+
 	<% current_user.site_cates.each do |site_cate| %>
-		<h2><%= site_cate.name %></h2>
-		<ul>
-			<% site_cate.site_items.each do |item| %>
-				<li><%= item.site_title %> [<%=link_to item.site_url, item.site_url%>]</li>
-			<% end %>
-		</ul>
+		<%= render :partial => "home/gallery", :locals => {:site_cate => site_cate} %>
 	<% end %>
 
 <% end %>
