--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
  *= require bootstrap_and_overrides
  *= require lavishbootstrap
  *= require bootstrap-modal
+ *= require _font-awesome
  *= require home
 
 */
