--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -15,9 +15,9 @@
 .thumbnail img{
   height: 60px;
 }
-.thumbnail h4{
-  height: 20px;
+.thumbnail {
+  height: 160px;
 }
-.thumbnail .text{
-  height: 60px;
+.no_img{
+	height: 65px;
 }
