--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 		</p><p>
 		你不是唯一出现这种情况的人。这也是为什么有那么多的新型网站上线，提供给你全新的和直观的方式来收藏和保存的内容。Daiii就是其中一个，帮助你保存和收藏你喜欢的网页的工具。希望你喜欢</p>
 		<div class="alert alert-note">
-	  	已经有<%= @users.size %>个网友正在使用DaIII收藏他们喜欢的网页~</div>
+	  	已经有<%= 300 + @users.size %>个网友正在使用DaIII收藏他们喜欢的网页~</div>
 	  <p><a href="/users/sign_up" class="btn btn-primary btn-large">现在就开始 »</a></p>
 	</div>
 
