--- a/app/views/home/_gallery.html.erb
+++ b/app/views/home/_gallery.html.erb
@@ -21,7 +21,7 @@
         <div class="thumbnail">
           <%=image_tag site_item.site_icon, :alt => site_item.site_title %>
           <h4>
-            <%= link_to site_item.site_title.truncate(22, ''), site_item.site_url, :target => '_blank' %>
+            <%= link_to site_item.site_title.truncate(22), site_item.site_url, :target => '_blank' %>
           </h4>
           <div class="text">
             <%= site_item.note.truncate(45) %>...
@@ -36,7 +36,7 @@
     <% site_items_no_icons.sort{|a, b| b.updated_at <=> a.updated_at}.each do |site_item| %>
       <li class="span3">
         <div class="thumbnail no_img">
-          <h4><%= link_to site_item.site_title.truncate(22, ''), site_item.site_url, :target => '_blank' %></h4>
+          <h4><%= link_to site_item.site_title.truncate(22), site_item.site_url, :target => '_blank' %></h4>
          <div class="text">
             <%= site_item.note.truncate(28) %>...
             <%=link_to edit_site_item_path(site_item) do %>
