--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,3 +21,14 @@
 .no_img{
 	height: 65px;
 }
+
+/**customer form of quick Daiii**/
+.field_longer{
+  width: 500px;
+}
+.field_shorter{
+  width: 100px;
+}
+.btn_upper{
+  margin-top: -8px;
+}
