--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,10 +5,43 @@
 		</p><p>
 		你不是唯一出现这种情况的人。这也是为什么有那么多的新型网站上线，提供给你全新的和直观的方式来收藏和保存网址内容。
 		Daiii就是其中一个，帮助你收藏喜欢的网页，单纯的、私密的---只是收藏。希望你喜欢!</p>
-		<div class="alert alert-note">
-	  	已经有<%= 300 + @users.size %>个网友正在使用DaIII收藏他们喜欢的网页~</div>
-	  <p><a href="/users/sign_up" class="btn btn-primary btn-large">现在就开始 »</a></p>
+		<div class="alert alert-block">
+		  <button type="button" class="close" data-dismiss="alert">&times;</button>
+		  <h4>Daiii!</h4>
+		  已经有<%= 300 + @users.size %>个网友正在使用DaIII收藏他们喜欢的网页...
+		</div>
+
+	  <p><a href="/users/sign_up" class="btn btn-primary btn-large">现在就开始 »</a>
+	  	<button class="demo btn btn-primary btn-large" data-toggle="modal" href="#full-width">视频教程</button></p>
 	</div>
+
+	<div class="well well-large">
+		<p>3013-04-05 &nbsp;&nbsp;&nbsp;&nbsp;
+			快速搜藏功能实现，用户只需要将网页地址拖拽到文本框即可收藏！
+		</p>
+		<p>3013-04-02 &nbsp;&nbsp;&nbsp;&nbsp;
+			添加了后台自动采集网站Logo功能，用户添加一个收藏，后台会自动采集改网址的LOGO！
+		</p>
+		<p>3013-03-25 &nbsp;&nbsp;&nbsp;&nbsp;
+			服务器托管到云服务，保证网站运行的稳定性.
+		</p>
+		<p>3013-03-20 &nbsp;&nbsp;&nbsp;&nbsp;
+			收藏网Daiii上线！
+		</p>
+	</div>
+
+<div id="full-width" class="modal container hide fade" tabindex="-1">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3>Daiii基本操作过程.</h3>
+  </div>
+  <div class="modal-body" style="text-align: center;">
+	    <%=play_flash "/assets/daiii.swf", :width => '800', :height => '420' %>
+  </div>
+  <div class="modal-footer">
+    <button type="button" data-dismiss="modal" class="btn">关闭</button>
+  </div>
+</div>
 
 <% else %>
 
