--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 
-<%= link_to image_tag(asset_path('logo.png')), root_path, :class => 'brand' %>
-
+<%#= link_to image_tag(asset_path('logo.png')), root_path, :class => 'brand' %>
+<h2><%= link_to "Daiii云端收藏夹", root_path, :class => 'brand' %></h2>
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
