--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
-
-<%#= link_to image_tag(asset_path('logo.png')), root_path, :class => 'brand' %>
-<h2><%= link_to "Daiii云端收藏夹", root_path, :class => 'brand' %></h2>
 <ul class="nav">
+  <li>
+    <%= link_to "Daiii云端收藏夹", root_path, :class => 'brand' %>
+  </li>
   <% if user_signed_in? %>
     <li>
       <%= link_to "新建分类", new_site_cate_path, data: { toggle: "modal", target: "#ajax-modal" } %>
