--- a/app/assets/stylesheets/application_static.css.scss
+++ b/app/assets/stylesheets/application_static.css.scss
@@ -28,7 +28,7 @@ h1, h2, h3{
 
 .logo{
 	color: #25a0d4;
-	font-size: 40px;
+	font-size: 200%;
 	font-family: "微软雅黑";
 	padding: 10px;
 	padding-left: 60px;
