--- a/app/views/home/index_static.html.erb
+++ b/app/views/home/index_static.html.erb
@@ -11,8 +11,8 @@
 	你不是唯一出现这种情况的人。这也是为什么有那么多的新型网站上线，提供给你全新的和直观的方式来收藏和保存网址内容。
 	雨服务就是其中一个，帮助你收藏喜欢的网页，单纯的、私密的---只是收藏。希望你喜欢!</p>
 
-  <p><a href="/users/sign_up" class="btn btn-primary btn-large">现在就开始 »</a>
-  	<button class="demo btn btn-primary btn-large" data-toggle="modal" href="#full-width">视频教程</button></p>
+  <p><a href="/users/sign_up" class="btn btn-primary btn-large">现在就试用 »</a>
+  	<button class="demo btn btn-large" data-toggle="modal" href="#full-width">使用教程</button></p>
 </div>
 
 
