--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     </div> <!--! end of .container -->
   </div> <!--! end of #main -->
 
-  <%=render 'layouts/footer' %>
+  <%#=render 'layouts/footer' %>
   <%= render 'layouts/modal' %>
   </body>
 </html>
