--- a/app/views/layouts/application_static.html.erb
+++ b/app/views/layouts/application_static.html.erb
@@ -22,13 +22,16 @@
 <div class="container-narrow">
   <div class="masthead">
     <ul class="nav nav-pills pull-right">
+       <li>
+        <%= link_to "首页", "/" %>
+      </li>
       <li>
         <%= link_to "登录", "/home/modal_window", data: { toggle: "modal", target: "#ajax-modal" } %>
       </li>
       <li><%= link_to '注册', new_user_registration_path %></li>
       <li><a href="/us">联系</a></li>
     </ul>
-    <h3 class="muted logo"><span class="blue">雨服务<small>  通过云计算轻松收藏网址；通过雨服务提升使用价值。</small></span></h3>
+    <h3 class="muted logo"><span class="blue">雨服务</span></h3>
   </div>
 
   <hr>
