--- a/app/views/site_items/edit.html.erb
+++ b/app/views/site_items/edit.html.erb
@@ -1,8 +1,4 @@
 <%= render 'form' %>
 
-<%= link_to("删除", site_item_path(@site_item), :data => { :confirm => "你确定要Kill掉这个网址?" }, :method => :delete, :class => 'btn btn-mini')  %>
- 
-<%= link_to '返回分类', site_cate_path(@site_item.site_cate) %>
- |
-<%= link_to '返回首页', root_path %>
+<%= link_to("删除？", site_item_path(@site_item), :data => { :confirm => "你确定要Kill掉这个网址?" }, :method => :delete, :class => 'btn btn-mini')  %>
 
