--- a/app/assets/stylesheets/ie.css.scss
+++ b/app/assets/stylesheets/ie.css.scss
@@ -1,10 +1,104 @@
 // just fix IE
 
-#main{
-	margin-top: 80px;
-}
-
 #side_nav{
 	position: fixed;
 	top: 80px;
+}
+
+#ie-container{
+	width: 760px;
+	max-width: 860px;
+	padding: 10px 20px;
+}
+
+
+/********after login**/
+#main{
+	width: 960px;
+	margin-top: 120px;
+}
+#ie-span1{
+	margin: 20px;
+	width: 100px;
+}
+.container{
+	margin: 20px;
+	background: #eee;
+}
+
+.navbar{
+	width: 960px;
+}
+.navbar li{
+	float: left;
+}
+
+.header{
+	margin: 0 auto;
+	widht: 860px;
+}
+#side_nav{
+	background: #eee;
+	padding: 10px;
+	margin-right: 120px;
+}
+
+/* NAVBAR */
+
+/* !CPU HIGH, fix for IE6 shake when scroll */
+* html,* html body {
+  _background-image:url(about:blank);
+  _background-attachment:fixed;
+}
+/* !CPU HIGH, fix for IE6 not support fixed position */
+.navbar-fixed-top {
+  _position:absolute;
+  _bottom:auto;
+  _top:expression(eval(document.documentElement.scrollTop));
+}
+/* !CPU HIGH, fix for IE6 not support fixed position */
+.navbar-fixed-bottom {
+  _position:absolute;
+  _bottom:auto;
+  _top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop,10)||0)-(parseInt(this.currentStyle.marginBottom,10)||0)));
+}
+
+/* DROPDOWN */
+.dropup,
+.dropdown {
+  *zoom:1;
+}
+
+/* CLOSE */
+.close {
+  _font-size: 15px;
+}
+
+.modal-header h3 {
+  *display: inline;
+  *zoom:1;
+}
+
+/* MODALS */
+.modal-backdrop {
+  _position: absolute;
+  _top:0;
+  _margin-top:0;
+  _width:expression(eval(document.documentElement.scrollWidth));
+  _height:expression(eval(document.documentElement.scrollHeight));
+}
+.modal {
+  _position:absolute;
+  _top:0;
+  _margin-top:0;
+  _top:expression(eval(document.documentElement.scrollTop));
+}
+.modal.fade.in {
+  _filter:alpha(opacity=100);
+}
+.modal-backdrop {
+  _filter: alpha(opacity=80);
+}
+.modal-body {
+  _height:expression(this.scrollHeight > 400 ? "400px" : "auto");
 }
