--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,12 @@
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Railscomposerapp2" %>">
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
-    <!--[if IE]>
+    <!--[if IE 7]>
       <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css">
       <link rel="stylesheet" href="assets/ie.css">
+    <![endif]-->
+    <!--[if lte IE 6]>
+      <link rel="stylesheet" type="text/css" href="assets/bootstrap-ie6.css">
     <![endif]-->
     <%= csrf_meta_tags %>
     <%= yield(:head) %>
@@ -36,7 +39,7 @@
     <div class="container">
       <div class="content">
          <div class="row-fluid">
-          <div class="span1">
+          <div class="span1" id="ie-span1">
             <%= render 'site_cates/cate_list' %>    
           </div>
           <div class="span11">
@@ -50,5 +53,8 @@
 
   <%#=render 'layouts/footer' %>
   <%= render 'layouts/modal' %>
+  <!--[if lte IE 6]>
+    <script type="text/javascript" src="assets/bootstrap-ie.js"></script>
+  <![endif]-->
   </body>
 </html>
