--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -1,21 +1,29 @@
-<% @left_items, @right_items = @site_items.partition{|r| r.id > @site_items[@site_items.size/2].id } %>
-<div class="row-fluid">
-  <div class="span6">
-    <table class="table table-striped table-hover">
-      <tbody>
-      <% @right_items.each do |site_item| %>
-        <%= render :partial => "site_items/show", :locals => {:site_item => site_item} %>
+<% if mobile_device? %>
+  <ul class="mobile">
+      <% @site_items.each do |site_item| %>
+        <li><%= render :partial => "site_items/show", :locals => {:site_item => site_item} %></li>
       <% end %>
-      </tbody>
-    </table>
+  </ul>
+<% else %>
+  <% @left_items, @right_items = @site_items.partition{|r| r.id > @site_items[@site_items.size/2].id } %>
+  <div class="row-fluid">
+    <div class="span6">
+      <table class="table table-striped table-hover">
+        <tbody>
+        <% @right_items.each do |site_item| %>
+          <tr><td><%= render :partial => "site_items/show", :locals => {:site_item => site_item} %></td></tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="span6">
+      <table class="table table-striped table-hover">
+        <tbody>
+        <% @left_items.each do |site_item| %>
+          <tr><td><%= render :partial => "site_items/show", :locals => {:site_item => site_item} %></td></tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <div class="span6">
-    <table class="table table-striped table-hover">
-      <tbody>
-      <% @left_items.each do |site_item| %>
-        <%= render :partial => "site_items/show", :locals => {:site_item => site_item} %>
-      <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
+<% end %>
