--- a/app/views/home/index_static.html.erb
+++ b/app/views/home/index_static.html.erb
@@ -18,13 +18,13 @@
 </div>
 
 
-<div id="full-width" class="modal container hide fade" tabindex="-1">
+<div id="full-width" class="modal container hide fade container-narrow" tabindex="-1">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>雨服务基本操作过程.</h3>
+    <h3>雨服务网址收藏后台效果.</h3>
   </div>
   <div class="modal-body" style="text-align: center;">
-      loading...
+      <%=image_tag "/assets/demo.png" %>
       <%#=play_flash "/assets/daiii.swf", :width => '800', :height => '420' %>
   </div>
   <div class="modal-footer">
