--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,7 +2,7 @@
 body { padding-top: 20px; }
 @import "bootstrap-responsive";
 
-$link_color: #3399cc;
+$link_color: #0099ff;
 
 h1,h2,h3{
 	color: $link_color;
