--- a/app/assets/stylesheets/application_static.css.scss
+++ b/app/assets/stylesheets/application_static.css.scss
@@ -66,3 +66,99 @@ h1, h2, h3{
 footer .content{
   color: #999;
 }
+
+/********install quote bookmark bar guide style begin**********/
+#chrome {
+  margin: 0 auto;
+  width: 500px;
+  height: 224px;
+  background: url(/assets/chrome.png) no-repeat;
+}
+#chrome_installed {
+  margin: 0 auto;
+  width: 500px;
+  height: 224px;
+  background: url(/assets/chrome-installed.png) no-repeat;
+}
+
+.key {
+  display: inline-block;
+  padding: 3px 5px 0 5px;
+  color: #999999;
+  font-family: Consolas, Monaco, monospace;
+  font-size: 0.76190em;
+  font-weight: bold;
+  line-height: 1.2em;
+  background-color: #f4f4f4;
+  border-color: #dddddd #999999 #999999 #dddddd;
+  border-style: solid;
+  border-width: 3px;
+  -khtml-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  -khtml-box-shadow: 0 0 10px #dddddd inset;
+  -moz-box-shadow: 0 0 10px #dddddd inset;
+  -ms-box-shadow: 0 0 10px #dddddd inset;
+  -o-box-shadow: 0 0 10px #dddddd inset;
+  -webkit-box-shadow: 0 0 10px #dddddd inset;
+  box-shadow: 0 0 10px #dddddd inset;
+}
+
+.highlighted {
+  margin: 1.5em 0 3em 0;
+  padding: 16px;
+  color: #0099ff;
+  display: block;
+  font-family: adobe-caslon-pro, Georgia, serif;
+  font-size: 21px;
+  font-weight: normal;  
+  text-align: center;
+  line-height: 30px;
+  background-color: #e6f1f8;
+  -khtml-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+
+#quoteredlet {
+  position: absolute;
+  top: 210px;
+  left: 730px;
+  cursor: move;
+  z-index: 100;
+  filter: Light;
+  padding: 10px 20px;
+}
+#arrow1 {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 690px;
+  width: 92px;
+  height: 300px;
+  background: url(/assets/arrow1.png) no-repeat;
+  z-index: 10;
+}
+#arrow2 {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 700px;
+  width: 150px;
+  height: 450px;
+  background: url(/assets/arrow2.png) no-repeat;
+  z-index: 10;
+}
+
+#installation_check{
+  display: none;
+  text-align: center;
+  width: auto;
+}
+/********install guide style end**********/
