--- a/app/views/home/chrome.html.erb
+++ b/app/views/home/chrome.html.erb
@@ -1,6 +1,77 @@
+<div class="tabbable tabs-left">
+  <ul class="nav nav-tabs" id="myTab">
+    <li class="active"><a href="#tab1" data-toggle="tab">步骤 1</a></li>
+    <li><a href="#tab2" data-toggle="tab">步骤 2</a></li>
+    <li><a href="#tab3" data-toggle="tab">步骤 3</a></li>
+  </ul>
+  <div class="tab-content">
+    <div class="tab-pane active" id="tab1">
+      
+      <div id="step1" class="step">
+          <p>步骤 1: 首先确保你的Chrome浏览器的书签是可见的.</p>
+          <div id="chrome"></div><br><br>
+          <p class="tip">如果没有看到书签栏?<br>按键： <span class="key">Ctrl</span> + <span class="key">Shift</span> + <span class="key">B</span> .</p><br>
+          <p><a href="#tab2" data-toggle="tab">接下来就可以步骤 2</a></p>
+      </div>
 
-<a href="javascript:void((function(d){var e=d.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','//www.quotered.com/assets/scriptlet/quoteredlet.js?r='+Math.random()*99999999);d.body.appendChild(e)})(document));">+雨+</a>
+    </div>
+    <div class="tab-pane" id="tab2">
+      
+      <div id="step2" class="step">
+          <p><span class="message">步骤 2: 把下面的按钮拖放到浏览器的书签栏.</span></p>
+          <p>&nbsp;</p>
+          <div id="arrow1"></div>
+          <div id="arrow2"></div>
 
-<br>
+          <a id="quoteredlet" class="btn btn-large btn-info" title="+雨+" href="javascript:void((function(d){var e=d.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','/assets/ext/chrome.js?r='+Math.random()*99999999);d.body.appendChild(e)})(document));" onclick="alert('把该按钮拖放到书签栏.'); return false">+雨+<span></span></a>
+          <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+          <div id="installation_check">
+             <p><a href="#tab3" data-toggle="tab">非常好，如果你成功的添加了书签，可以进入步骤3了</a></p>
+             <div id="chrome_installed"></div>
+          </div>
+      </div>
 
-<a href="javascript:void((function(d){var e=d.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','/assets/ext/chrome.js?r='+Math.random()*99999999);d.body.appendChild(e)})(document));">+雨+</a>
+    </div>
+    <div class="tab-pane" id="tab3">
+      
+      <div id="step3" class="step">
+          <p>步骤 3. 在任何你访问的页面，选中你要引用的文字，然后点击书签栏的“+雨+”即可添加到收藏.</p>
+          <p class="highlighted">The more that you read, the more things you will know. The more that you learn, the more places you'll go.<br><em>Dr. Seuss</em></p>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  function update_status(e) {
+        $("#step2 .message").html(e), $("#quoteredlet_message").html("&larr; " + e)
+    }
+
+  $(function () {
+    var dragging_quoteredlet = !1,
+    installed_quoteredlet = !1,
+    arrow = $("#step2 .message").length ? $("#arrow1") : $("#arrow2"),
+    y = 0,
+    DURATION = 200;
+
+    $("#quoteredlet").mouseenter(function () {
+        arrow.fadeIn(), update_status("鼠标点击按钮不放，把按钮拖到浏览器上面的书签栏去!")
+    }),
+
+    $("#quoteredlet").mouseleave(function () {
+        dragging_quoteredlet || arrow.fadeOut(), update_status("步骤 2: 将此按钮拖放到上面的书签栏.")
+    }), 
+    
+    $("#quoteredlet").mousedown(function () {
+        update_status("嗯，往上拖动!"), dragging_quoteredlet = !0
+    }), 
+
+    $(document).on("dragend", function (e) {
+        dragging_quoteredlet && (arrow.fadeOut(), y > 50 ? update_status("你好像没有完成，再试一次?") : (installed_quoteredlet = !0, update_status("步骤 2: 将此按钮拖放到上面的书签栏."), $("#installation_check").fadeIn())), dragging_quoteredlet = !1
+    }), 
+    $(document).on("dragover", function (e) {
+        dragging_quoteredlet && (y = e.originalEvent.clientY, y > 200 ? update_status("进一步向上拖动!") : y > 100 ? update_status("恩，已经拖到了!") : y > 2 ? update_status("继续往上!") : update_status("好，松手!"))
+    })
+  });
+</script>
