--- a/app/views/home/index_static.html.erb
+++ b/app/views/home/index_static.html.erb
@@ -1,3 +1,8 @@
+<div class="alert alert-info">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <h4>基于Google Chrome浏览器的插件已经开发完毕了，<a href="/chrome">请点击这里安装</a></h4>
+</div>
+
 <div class="alert alert-block">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <h4><%= Time.now.strftime("%Y-%m-%d") %>:</h4>
