--- a/app/views/site_cates/_cate_list.html.erb
+++ b/app/views/site_cates/_cate_list.html.erb
@@ -1,5 +1,5 @@
 
-<div id="side_nav">
+<div id="side_nav" data-spy="affix" data-offset-top="500">
 	<ul class="nav nav-tabs nav-stacked">
 		<li <% unless params[:cate_id] -%>class="active" <% end -%>><a href="/">全部</a></li>
 		<% current_user.site_cates.each do |item| %>
@@ -8,13 +8,14 @@
 	</ul>
 </div>
 
-<script type="text/javascript">
-  $(window).scroll(function(){ 
-     $el = $('#side_nav'); 
-     if ($(this).scrollTop() > 100 && $el.css('position') != 'fixed'){ 
-       $('#side_nav').css({'position': 'fixed', 'top': '80px'}); 
-     }else if($(this).scrollTop() < 100 && $el.css('position') == 'fixed'){ 
-       $('#side_nav').css({'position': 'absolute', 'top': '80px'}); 
-     } 
-  }); 
-</script>
+ <script type="text/javascript">
+ //以下代码实现了侧边栏的固定， 等价于bootstrap提供的‘附加导航’：data-spy="affix" data-offset-top="200"
+//   $(window).scroll(function(){ 
+//      $el = $('#side_nav'); 
+//      if ($(this).scrollTop() > 100 && $el.css('position') != 'fixed'){ 
+//        $('#side_nav').css({'position': 'fixed', 'top': '80px'}); 
+//      }else if($(this).scrollTop() < 100 && $el.css('position') == 'fixed'){ 
+//        $('#side_nav').css({'position': 'absolute', 'top': '80px'}); 
+//      } 
+//   }); 
+ </script>
