--- a/app/views/home/chrome.html.erb
+++ b/app/views/home/chrome.html.erb
@@ -23,7 +23,7 @@
           <div id="arrow1"></div>
           <div id="arrow2"></div>
 
-          <a id="quoteredlet" class="btn btn-large btn-info" title="+雨+" href="javascript:void((function(d){var e=d.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','/assets/ext/chrome.js?r='+Math.random()*99999999);d.body.appendChild(e)})(document));" onclick="alert('把该按钮拖放到书签栏.'); return false">+雨+<span></span></a>
+          <a id="quoteredlet" class="btn btn-large btn-info" title="+雨+" href="javascript:void((function(d){var e=d.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://www.daiii.com/assets/ext/chrome.js?r='+Math.random()*99999999);d.body.appendChild(e)})(document));" onclick="alert('把该按钮拖放到书签栏.'); return false">+雨+<span></span></a>
           <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
           <div id="installation_check">
              <p><a href="#tab3" data-toggle="tab">非常好，如果你成功的添加了书签，可以进入步骤3了</a></p>
