--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,3 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+/***side_nav***/
+
+#side_nav{
+  width: 90%;
+  margin: 0 auto;
+  position: fixed;
+  top: 50px;
+}
+
+#side_nav .active a{
+  background: #eee;
+}
+#side_nav{
+  background-color: #eee;
+}
