--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,11 +43,15 @@
           <%= render 'layouts/messages' %> 
           <%= yield %>
         <% else %>
-         <div class="row-fluid">
-          <div class="span1" id="ie-span1">
-            <%= render 'site_cates/cate_list' %>    
+
+        <div class="row-fluid">
+          <div class="span12">
+            <%= render 'site_cates/cate_list' %>  
           </div>
-          <div class="span11">
+        </div>
+
+         <div class="row-fluid" style="margin-top: 30px;">
+          <div class="span12">
             <%= render 'layouts/messages' %> 
             <%= yield %>
           </div>
