--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,13 @@
   <div class="alert alert-info">
     <a class="close" data-dismiss="alert">×</a>
     <div id="flash_notice">
-      <p>你好，你还没有添加任务网址哦。 你可以通过以下步骤实现：</p>
+
+      <p>你好，你还没有添加任务网址哦。</p>
+
+      <h4>首先，确保安装了浏览器插件，通过浏览器插件可以简单方便的添加收藏，<a href="/chrome" target="_blank">请点击这里安装</a></h4>
+
+      <br/><br/>
+      手动添加收藏则通过以下步骤：
       <ul>
         <li>
           添加分类, 点击导航：
