--- a/app/views/site_items/_form.html.erb
+++ b/app/views/site_items/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :site_title %>
     <%= f.input :site_url %>
     <%= f.input :note, :input_html =>{:rows => 4, :cols => 60} %>
-    <%= f.input :tag_input, :placeholder => "#ddd" %>
+    <%= f.input :tag_list, :placeholder => "以空格隔开" %>
     <%= f.input :site_username %>
     <%= f.input :site_password, input_html: {type: 'input'} %>
     <%= f.input :site_password_tips,  input_html: {type: 'input'} %>
