--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -5,7 +5,7 @@
       <% end %>
   </ul>
 <% else %>
-  <% @left_items, @right_items = @site_items.partition{|r| r.id > @site_items[@site_items.size/2].id } %>
+  <% @right_items, @left_items = @site_items.partition{|r| r.id > @site_items[@site_items.size/2].id } %>
   <div class="row-fluid">
     <div class="span6">
       <table class="table table-striped table-hover">
